deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-subjects
spec:
  replicas: 3
  selector:
    matchLabels:
      app: providers-subjects
  template:
    metadata:
      labels:
        app: providers-subjects
    spec:
      automountServiceAccountToken: false
      containers:
      - name: subject
        image: fteychene/cloud-cadavre-exquis-provider-bis:1.0-SNAPSHOT
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-verbs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: providers-verbs
  template:
    metadata:
      labels:
        app: providers-verbs
    spec:
      automountServiceAccountToken: false
      containers:
      - name: verb
        image: fteychene/cloud-cadavre-exquis-provider-bis:1.0-SNAPSHOT
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-adjectives
spec:
  replicas: 3
  selector:
    matchLabels:
      app: providers-adjectives
  template:
    metadata:
      labels:
        app: providers-adjectives
    spec:
      automountServiceAccountToken: false
      containers:
      - name: adjective
        image: fteychene/cloud-cadavre-exquis-provider-bis:1.0-SNAPSHOT
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
