ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
  - host: cadavre-exquis.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-dispatcher
            port: 
              number: 80
